<resources>
    <string name="app_name">WanAndroid</string>


    <string name="reload">Reload</string>
    <string name="double_click_exit_tint">Press the back button again to exit the WanAndroid</string>

    <string name="home">Home pager</string>
    <string name="knowledge_hierarchy">Knowledge hierarchy</string>
    <string name="navigation">Navigation</string>
    <string name="project">Project</string>
    <string name="useful_sites">Useful Sites</string>
    <string name="collect">Collection</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="search">Top Search</string>
    <string name="search_event">Search</string>
    <string name="usage">Usage</string>
    <string name="nav_open">Open DrawerLayout</string>
    <string name="nav_close">Close DrawerLayout</string>
    <string name="login_in">Login</string>

    <string name="login_fail">Login fail</string>
    <string name="register_fail">Register fail</string>
    <string name="account_password_null_tint">The user name or password cannot be empty</string>
    <string name="login_account_tint">Please enter user name</string>
    <string name="login_password_tint">Please enter password</string>
    <string name="login_confirm_password_tint">Please enter password confirmation</string>
    //Common
    <string name="http_error">network anomaly</string>
    <string name="unKnown_error">unKnown error</string>
    <string name="about_us">About Us</string>

    <string name="failed_to_obtain_banner_data">Failed to obtain advertising data</string>
    <string name="failed_to_obtain_article_list">Gets the article list data</string>

    //Knowledge hierarchy
    <string name="failed_to_obtain_knowledge_data">Failure to obtain knowledge system data</string>

    <string name="load_more_no_data">There\'s no extra data</string>

    //Navigation
    <string name="navigation_tint">%1$s navigation resources continue to be updated</string>
    <string name="failed_to_obtain_navigation_list">Failed to get the navigation data list</string>

    //Project
    <string name="failed_to_obtain_project_list">Failed to get the project data list</string>
    <string name="failed_to_obtain_project_classify_data">Failed to get list of project classified data</string>

    <string name="install">install</string>

    //Search
    <string name="failed_to_obtain_search_data_list">Failed to obtain search data list</string>
    <string name="failed_to_obtain_top_data">Failed to get hot data</string>
    <string name="failed_to_obtain_useful_sites_data">Failed to obtain useful website data</string>
    <string name="or">Or</string>
    <string name="clear_all">Clear all</string>
    <string name="search_null_tint">find some dry goods *≧▽≦*</string>

    <string name="search_tint">Find more dry goods</string>
    <string name="history_search">Search History</string>

    <string name="register_tint">Please enter your password</string>
    <string name="login_tint">Please enter your username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_not_same">Passwords don\'t match</string>
    <string name="login_success">Login Success</string>

    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="logout_tint">Log out?</string>

    <string name="share">Share</string>
    <string name="open_it_with_browser">Open it with the system browser</string>

    //Setting
    <string name="setting_normal">General settings</string>
    <string name="setting_cache">Automatic cache</string>
    <string name="setting_image">No Pic model</string>
    <string name="setting_night">Night mode</string>
    <string name="setting_other">Other settings</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_clear">Clear cache</string>
    <string name="send_email">Select the email client:</string>
    <string name="share_content">%1$Share 【%2$s】special top：%3$s</string>
    <string name="share_to">Share to: </string>
    <string name="write_permission_not_allowed">Gets write permission failed</string>
</resources>
