<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/other"
        android:checkableBehavior="single">

        <item android:id="@+id/wanandroid"
            android:title="@string/app_name"
            android:icon="@drawable/ic_wan_android"
            android:checkable="true"
            android:checked="true"/>

        <item android:id="@+id/collect"
            android:title="@string/collect"
            android:icon="@drawable/icon_like"
            android:checkable="true" />

        <item android:id="@+id/setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_setting"
            android:checkable="true" />

        <item android:id="@+id/about"
        android:title="@string/about"
            android:checkable="false"
        android:icon="@drawable/ic_about"/>

        <item android:id="@+id/logout"
            android:title="@string/logout"
            android:checkable="false"
            android:icon="@drawable/ic_logout"/>


    </group>

</menu>