<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />


    <TextView
        android:id="@+id/tv_login_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_32dp"
        android:text="@string/login_in"
        android:textColor="@color/title_black"
        android:textSize="@dimen/text_size_36" />

    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_tag"
        android:layout_marginEnd="@dimen/size_48dp"
        android:layout_marginStart="@dimen/size_48dp"
        android:layout_marginTop="@dimen/size_64dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_12dp">


        <ImageView
            android:layout_width="@dimen/size_32dp"
            android:layout_height="@dimen/size_32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_account" />

        <android.support.design.widget.TextInputEditText
            android:hint="@string/login_tint"
            android:textColorHint="@color/grey"
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:lines="1"
            android:paddingEnd="@dimen/size_10dp"
            android:paddingStart="@dimen/size_10dp" />
    </LinearLayout>

    <View
        android:id="@+id/view_line_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_01dp"
        android:layout_below="@+id/ll_username"
        android:layout_marginEnd="@dimen/size_64dp"
        android:layout_marginStart="@dimen/size_64dp"
        android:background="@color/comment_line" />

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line_username"

        android:layout_marginEnd="@dimen/size_48dp"
        android:layout_marginStart="@dimen/size_48dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_12dp">


        <ImageView
            android:layout_width="@dimen/size_32dp"
            android:layout_height="@dimen/size_32dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_password" />

        <android.support.design.widget.TextInputEditText
            android:hint="@string/register_tint"
            android:textColorHint="@color/grey"
            android:id="@+id/edit_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ellipsize="end"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingEnd="@dimen/size_10dp"
            android:paddingStart="@dimen/size_10dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_01dp"
        android:layout_below="@+id/ll_pwd"
        android:layout_marginEnd="@dimen/size_64dp"
        android:layout_marginStart="@dimen/size_64dp"
        android:background="@color/comment_line" />


    <Button
        android:textSize="@dimen/text_size_18"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48dp"
        android:layout_above="@+id/tv_or"
        android:layout_marginEnd="@dimen/size_64dp"
        android:layout_marginStart="@dimen/size_64dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:background="@drawable/shape_color_blue_with_cornor" />


    <TextView

        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/size_12dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:text="@string/or"
        android:textColor="@color/comment_text"
        android:textSize="@dimen/text_size_16" />


    <Button
        android:textSize="@dimen/text_size_18"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/size_64dp"
        android:layout_marginEnd="@dimen/size_64dp"
        android:layout_marginStart="@dimen/size_64dp"
        android:background="@drawable/shape_color_accent_with_cornor" />


</RelativeLayout>
