<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tv_common_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_08dp"
        android:text="@string/setting_normal"
        android:textColor="@color/comment_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_common_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_08dp"
        app:cardCornerRadius="@dimen/size_03dp"
        app:cardElevation="@dimen/size_02dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_common_setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/drawer_item_bg_n"
            android:orientation="vertical">


            <!--自动缓存-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_auto_cache" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_cache"
                    android:textColor="@color/setting_text" />

                <android.support.v7.widget.AppCompatCheckBox
                    tools:ignore="PrivateResource"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorAccent"
                    android:id="@+id/cb_auto_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_01dp"
                android:background="@color/comment_line" />

            <!--无图模式-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_no_image" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_image"
                    android:textColor="@color/setting_text" />

                <android.support.v7.widget.AppCompatCheckBox
                    tools:ignore="PrivateResource"
                    android:button="@drawable/abc_btn_check_material"
                    android:id="@+id/cb_no_image_mode"
                    android:buttonTint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_01dp"
                android:background="@color/comment_line" />

            <!--夜间模式-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_night_mode" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_night"
                    android:textColor="@color/setting_text" />

                <android.support.v7.widget.AppCompatCheckBox
                    tools:ignore="PrivateResource"
                    android:id="@+id/cb_setting_night_mode"
                    android:layout_width="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorAccent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tv_other_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_08dp"
        android:text="@string/setting_other"
        android:textColor="@color/comment_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_common_setting" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_08dp"
        app:cardCornerRadius="@dimen/size_03dp"
        app:cardElevation="@dimen/size_02dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_other_setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/drawer_item_bg_n"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_setting_feed_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/size_12dp"
                android:drawableStart="@drawable/ic_feedback"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/size_12dp"
                android:text="@string/setting_feedback"
                android:textColor="@color/setting_text" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_01dp"
                android:background="@color/comment_line" />

            <!--清楚缓存-->
            <LinearLayout
                android:id="@+id/ll_setting_clean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/size_12dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_cache_clean" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp"
                    android:layout_weight="1"
                    android:text="@string/setting_clear"
                    android:textColor="@color/setting_text" />

                <TextView
                    android:id="@+id/tv_setting_clean_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_12dp"
                    android:textColor="@color/comment_text"
                    tools:text="193.37KB" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>