<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:background="@mipmap/icon_register_bg"
    android:layout_height="400dp">



    <LinearLayout
        android:id="@+id/ll_username"
        android:layout_above="@+id/ll_pwd"
        android:background="@drawable/shape_register_bg"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginEnd="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:padding="@dimen/size_08dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_account"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_username"
            android:hint="@string/login_account_tint"
            android:background="@null"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_04dp"
            android:textColor="@color/title_black"
            android:textColorHint="@color/grey"
            android:cursorVisible="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:background="@drawable/shape_register_bg"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginEnd="@dimen/size_32dp"
        android:padding="@dimen/size_08dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/size_01dp"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_pwd"
            android:hint="@string/login_password_tint"
            android:background="@null"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_04dp"
            android:textColor="@color/title_black"
            android:textColorHint="@color/grey"
            android:cursorVisible="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="@dimen/size_01dp"
        android:id="@+id/ll_confirm_pwd"
        android:layout_below="@+id/ll_pwd"
        android:inputType="textPassword"
        android:background="@drawable/shape_register_bg"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginEnd="@dimen/size_32dp"
        android:padding="@dimen/size_08dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password"/>

        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/edit_confirm_username"
            android:hint="@string/login_confirm_password_tint"
            android:background="@null"
            android:paddingStart="@dimen/size_10dp"
            android:paddingEnd="@dimen/size_10dp"
            android:layout_marginStart="@dimen/size_04dp"
            android:textColor="@color/title_black"
            android:textColorHint="@color/grey"
            android:cursorVisible="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18"
        android:background="@drawable/selector_register"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginStart="@dimen/size_45dp"
        android:layout_marginEnd="@dimen/size_45dp"
        android:layout_below="@+id/ll_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_32dp" />

</RelativeLayout>